--- a/assets/style/_mixins.scss
+++ b/assets/style/_mixins.scss
@@ -12,8 +12,9 @@
   }
 }
 
-@mixin big-search-bar($margin-top, $color, $border-color) {
-  margin-top: $margin-top;
+@mixin big-search-bar($color, $border-color) {
+  padding-left: 10px;
+  margin-top: 250px;
   margin-bottom: 0;
   background-color: $color;
   border: solid 1px $border-color;
@@ -32,6 +33,7 @@
 }
 
 @mixin big-button($color) {
+  margin-left: 10px;
   position: relative;
   bottom: 44px;
   left: 100%;
@@ -102,6 +104,9 @@
         padding-left: 10px;
         font-size: 1rem;
         color: $color;
+        max-height: 62px;
+        overflow: hidden;
+        margin-bottom: 0;
       }
     }
   }
