--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -5,22 +5,18 @@ body {
   color: white; }
 
 ::-webkit-input-placeholder {
-  color: white;
-  padding-left: 10px; }
+  color: white; }
 
 :-moz-placeholder {
   /* Firefox 18- */
-  color: white;
-  padding-left: 10px; }
+  color: white; }
 
 ::-moz-placeholder {
   /* Firefox 19+ */
-  color: white;
-  padding-left: 10px; }
+  color: white; }
 
 :-ms-input-placeholder {
-  color: white;
-  padding-left: 10px; }
+  color: white; }
 
 a {
   color: white;
@@ -30,12 +26,29 @@ a {
   display: none; }
 
 .opacity {
-  opacity: 0.05; }
+  opacity: 0.05;
+  position: absolute; }
 
 .logo {
+  width: 100px;
   position: absolute;
   left: 20px;
   top: 20px; }
+
+.top-link {
+  color: #e6e6e6; }
+  .top-link h1 {
+    text-align: right;
+    position: absolute;
+    right: 50px;
+    width: 300px;
+    font-size: 3.75rem; }
+
+#js-view-create:hover {
+  color: #AB537F; }
+
+#js-view-search:hover {
+  color: #6E7592; }
 
 .landing-page {
   width: 100vw;
@@ -47,12 +60,14 @@ a {
     .landing-page .call-to-action h1 {
       margin: 5px 0; }
   .landing-page #js-landing-search {
-    margin-top: 80px;
+    padding-left: 10px;
+    margin-top: 250px;
     margin-bottom: 0;
     background-color: #6E7592;
     border: solid 1px white;
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
     max-height: 42px;
+    margin-top: 80px;
     position: relative; }
   .landing-page .or-statement {
     position: relative; }
@@ -75,7 +90,8 @@ a {
       color: white; }
 
 .search-playlists #js-playlist-search {
-  margin-top: 150px;
+  padding-left: 10px;
+  margin-top: 250px;
   margin-bottom: 0;
   background-color: #AB537F;
   border: solid 1px #AB537F;
@@ -83,6 +99,7 @@ a {
   max-height: 42px;
   position: relative; }
 .search-playlists #js-playlist-search-button {
+  margin-left: 10px;
   position: relative;
   bottom: 44px;
   left: 100%;
@@ -107,7 +124,9 @@ a {
     border: solid 1px #AB537F;
     box-sizing: border-box;
     border: none;
-    margin-right: 20px; }
+    margin-left: 8.33333%;
+    margin-bottom: 8.3333%;
+    max-height: 100%; }
     .search-playlists .playlist-results .playlist-display h3 {
       padding-left: 10px;
       font-size: 1.75rem;
@@ -134,7 +153,10 @@ a {
           display: inline-block;
           padding-left: 10px;
           font-size: 1rem;
-          color: #AB537F; }
+          color: #AB537F;
+          max-height: 62px;
+          overflow: hidden;
+          margin-bottom: 0; }
 .search-playlists .playlist-hover {
   position: absolute;
   bottom: 0px;
@@ -144,10 +166,12 @@ a {
   border: solid 1px #AB537F;
   -webkit-box-shadow: 7px 7px 5px #AB537F;
   -moz-box-shadow: 7px 7px 5px #AB537F;
-  box-shadow: 7px 7px 5px #AB537F; }
+  box-shadow: 7px 7px 5px #AB537F;
+  padding: 0 5px; }
   .search-playlists .playlist-hover h4 {
     color: white; }
   .search-playlists .playlist-hover #js-view-playlist {
+    margin-left: 10px;
     position: relative;
     bottom: 44px;
     left: 100%;
@@ -162,8 +186,10 @@ a {
     height: auto;
     line-height: 42px;
     text-transform: none;
-    left: -25%;
-    top: 250px; }
+    position: absolute;
+    height: 40px;
+    left: 33.333%;
+    top: 400px; }
   .search-playlists .playlist-hover .chip {
     background-color: white;
     color: #AB537F;
@@ -177,13 +203,15 @@ a {
 .search-yt [type="radio"].with-gap:checked + label:after {
   background-color: #AB537F; }
 .search-yt #js-yt-search {
-  margin-top: 150px;
+  padding-left: 10px;
+  margin-top: 250px;
   margin-bottom: 0;
   background-color: #6E7592;
   border: solid 1px #6E7592;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
   max-height: 42px; }
 .search-yt #js-yt-search-button {
+  margin-left: 10px;
   position: relative;
   bottom: 44px;
   left: 100%;
@@ -238,9 +266,9 @@ a {
     margin-top: 10px; }
 
 .playlist-review-send {
-  position: absolute;
+  position: relative;
   width: 100%;
-  bottom: 60px; }
+  top: 250px; }
   .playlist-review-send #close-review-send {
     position: absolute;
     top: -150px;
@@ -307,7 +335,10 @@ a {
           display: inline-block;
           padding-left: 10px;
           font-size: 1rem;
-          color: #92C6DE; }
+          color: #92C6DE;
+          max-height: 62px;
+          overflow: hidden;
+          margin-bottom: 0; }
   .playlist-review-send #js-add-tag-button {
     position: relative;
     border-radius: 0;
@@ -331,5 +362,21 @@ a {
       background-color: #92C6DE;
       color: white;
       margin-right: 10px; }
+  .playlist-review-send #js-error-message h5 {
+    color: #92C6DE;
+    font-size: 1.25rem;
+    padding: 0 20px; }
+  .playlist-review-send .round {
+    border-radius: 100%;
+    height: 200px;
+    width: 200px;
+    background-color: #92C6DE;
+    text-align: center;
+    position: absolute;
+    left: 40vw;
+    top: 0; }
+    .playlist-review-send .round i {
+      color: white;
+      line-height: 200px; }
 
 /*# sourceMappingURL=style.css.map */
