--- a/assets/style/style.scss
+++ b/assets/style/style.scss
@@ -12,22 +12,18 @@ body {
 
 ::-webkit-input-placeholder {
    color: white;
-   padding-left: 10px;
 }
 
 :-moz-placeholder { /* Firefox 18- */
   color: white;
-  padding-left: 10px;
 }
 
 ::-moz-placeholder {  /* Firefox 19+ */
   color: white;
-  padding-left: 10px;
 }
 
 :-ms-input-placeholder {
   color: white;
-  padding-left: 10px;
 }
 
 a {
@@ -41,12 +37,33 @@ a {
 
 .opacity {
   opacity: 0.05;
+  position: absolute;
 }
 
 .logo {
+  width: 100px;
   position: absolute;
   left: 20px;
   top: 20px;
+}
+
+.top-link {
+  color: #e6e6e6;
+  h1 {
+    text-align: right;
+    position: absolute;
+    right: 50px;
+    width: 300px;
+    font-size: 3.75rem;
+  }
+}
+
+#js-view-create:hover {
+  color: $magenta;
+}
+
+#js-view-search:hover {
+  color: $blue-grey;
 }
 
 .landing-page {
@@ -61,7 +78,8 @@ a {
     }
   }
   #js-landing-search {
-    @include big-search-bar(80px, $blue-grey, white);
+    @include big-search-bar($blue-grey, white);
+    margin-top: 80px;
     position: relative;
   }
   .or-statement {
@@ -85,7 +103,7 @@ a {
 
 .search-playlists {
   #js-playlist-search {
-    @include big-search-bar(150px, $magenta, $magenta);
+    @include big-search-bar($magenta, $magenta);
     position: relative;
   }
   #js-playlist-search-button {
@@ -96,7 +114,9 @@ a {
     .playlist-display {
       @include playlist-display($magenta);
       border: none;
-      margin-right: 20px;
+      margin-left: 8.33333%;
+      margin-bottom: 8.3333%;
+      max-height: 100%;
     }
   }
   .playlist-hover {
@@ -109,13 +129,16 @@ a {
     -webkit-box-shadow: 7px 7px 5px $magenta;
     -moz-box-shadow:    7px 7px 5px $magenta;
     box-shadow:         7px 7px 5px $magenta;
+    padding: 0 5px;
     h4 {
       color: white;
     }
     #js-view-playlist  {
       @include big-button($magenta);
-      left: -25%;
-      top: 250px;
+      position: absolute;
+      height: 40px;
+      left: 33.333%;
+      top: 400px;
     }
     .chip {
       background-color: white;
@@ -136,7 +159,7 @@ a {
     background-color: $magenta;
   }
   #js-yt-search {
-    @include big-search-bar(150px, $blue-grey, $blue-grey);
+    @include big-search-bar($blue-grey, $blue-grey);
   }
   #js-yt-search-button {
     @include big-button($blue-grey);
@@ -180,9 +203,9 @@ a {
 }
 
 .playlist-review-send {
-  position: absolute;
+  position: relative;
   width: 100%;
-  bottom: 60px;
+  top: 250px;
   #close-review-send {
     position: absolute;
     top: -150px;
@@ -227,6 +250,27 @@ a {
       background-color: $light-blue;
       color: white;
       margin-right: 10px;
+    }
+  }
+  #js-error-message {
+    h5 {
+      color: $light-blue;
+      font-size: 1.25rem;
+      padding: 0 20px;
+    }
+  }
+  .round {
+    border-radius: 100%;
+    height: 200px;
+    width: 200px;
+    background-color: $light-blue;
+    text-align: center;
+    position: absolute;
+    left: 40vw;
+    top: 0;
+    i {
+      color: white;
+      line-height: 200px;
     }
   }
 }
